loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:8: error: '<-' expected but ')' found.
for (c < 0 to x) {
               ^LoopFor:13: error: illegal start of simple expression
	}
        ^